--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homework 13</title>
-</head>npm i axios
+</head>
 <body>
-  
+  <form class="search-form" id="search-form">
+    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+  </form>
+  <div class="gallery-div"></div>
 </body>
 </html>
