--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Homework 13</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <!-- <link rel="stylesheet" href="./normalize.css"> -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="wrapper">
   <form class="search-form" id="search-form">
-    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+    <input class="input" type="text" name="query" autocomplete="off" placeholder="Search images..." />
   </form>
   <div class="gallery-div"></div>
+  </div>
+
+
+<div class="lightbox js-lightbox">
+  <div class="lightbox__overlay"></div>
+
+  <div class="lightbox__content">
+    <!-- <img class="lightbox__image" src="" alt="" /> -->
+  </div>
+
+  <button type="button" class="lightbox__button" data-action="close-lightbox"></button>
+</div>
+
+  
 </body>
 </html>
