добавляет стилизацию, модульность

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <ul class="gallery-list"></ul>
   </div>
 
-    <div class="load-more container">
+    <div class="load-more">
       <button type="button" class="button">Load more</button>
     </div>
   </div>
